# Scripts

./: .gitignore  AGENTS.md  STARTUP.md  log
cli-tools/: INSTALL.md  README.md  SUMMARY.md  directory-tags.yaml  package-lock.json  package.json  pyproject.toml  test-deploy-args.js  verify-implementation.sh
cli-tools/docs/: cross-device-agents.md
cli-tools/docs/plans/: 2026-02-17-tools-tag-system-design.md  2026-02-17-tools-tag-system.md
cli-tools/reports/subagents/: agent_20251117_120134_10e516a5.md
cli-tools/scripts/: codex-simple  codex-wrapper.sh
cli-tools/src/cli_tools/: __init__.py
cli-tools/src/cli_tools/cloud_logs/: __init__.py  cli.py  log_fetcher.py
cli-tools/src/cli_tools/db_migrate/: __init__.py  cli.py  migration_runner.py
cli-tools/src/cli_tools/db_query/: __init__.py  cli.py  query_runner.py
cli-tools/src/cli_tools/followup/: cli.py  dispatcher.py  prompt_builder.py
cli-tools/src/cli_tools/google_chat/: __init__.py  cli.py
cli-tools/src/cli_tools/subagents/: __init__.py  main.py  terminal_launcher.py
cli-tools/src/cli_tools/subagents/prompts/: __init__.py  implementor.md  tool_creator.md
cli-tools/src/cli_tools/timezone/: __init__.py  cli.py
cli-tools/src/deploy/: deduplicate-log.js  deploy-runner.js  deploy-wrapper.sh  google-chat-message.js  launch-terminal.ps1  local-server-state.js  mutex-helper.js  send-local-request.js  stop-local-server.js  test-command.js  trigger-deploy.js  wait-for-health.js
cli-tools/src/deploy/payloads/: google-chat-message.json
cli-tools/tests/: test_subagent.py  test_terminal_launcher.py
(+125 files in other folders)
