[project]
name = "cli-tools"
version = "1.0.0"
description = "Centralized CLI tools for ProcurementAgentAI projects"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "asyncpg>=0.29.0",
    "cloud-sql-python-connector[asyncpg]>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
time-convert = "cli_tools.timezone.cli:main"
db-query = "cli_tools.db_query.cli:main"
db-migrate = "cli_tools.db_migrate.cli:main"
cloud-logs = "cli_tools.cloud_logs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=7.0"]
